k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server-service
  namespace: clothing-shop
spec:
  selector:
    app: clothing-shop
    tier: backend
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: client-service
  namespace: clothing-shop
spec:
  selector:
    app: clothing-shop
    tier: frontend
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
  type: ClusterIP
